%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!206 &-1525654880506663367
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 4289904822598732194}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1468306681496701699}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6246239367349125613}
    m_Threshold: 2
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  m_BlendParameter: Posture
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 2
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!206 &-1468306681496701699
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: standing
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 732d59395aacbff40b862ea222b11e87, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: b69d62e04fa01b74f913c66ca1ecf9a5, type: 3}
    m_Threshold: 0.071428575
    m_Position: {x: 0, y: 1.5584013}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 1fe491b8a55abda4b9e8de4ea54bf2d3, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -1.089123, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1fe491b8a55abda4b9e8de4ea54bf2d3, type: 3}
    m_Threshold: 0.21428572
    m_Position: {x: 1.089123, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 14a1dc364e6493f499d260ae54def726, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: -1.7687004, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 14a1dc364e6493f499d260ae54def726, type: 3}
    m_Threshold: 0.35714287
    m_Position: {x: 1.7687004, y: 1.558401}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d1b91f6ab8567d941836cc11dd8de603, type: 3}
    m_Threshold: 0.42857143
    m_Position: {x: 0, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 14e7eae4bb7a03e4a8b1980dfbf9fca3, type: 3}
    m_Threshold: 0.5
    m_Position: {x: -1.6844267, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 14e7eae4bb7a03e4a8b1980dfbf9fca3, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: 1.6844267, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: d75a40b651e1ab140b1c2fc3a26f90de, type: 3}
    m_Threshold: 0.64285713
    m_Position: {x: -2.3185368, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d75a40b651e1ab140b1c2fc3a26f90de, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: 2.3185368, y: 5.662317}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: 5106a269f36fbcb46821c759017dc94b, type: 3}
    m_Threshold: 0.78571427
    m_Position: {x: -2.4658673, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400006, guid: 5106a269f36fbcb46821c759017dc94b, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: 2.4658673, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 5106a269f36fbcb46821c759017dc94b, type: 3}
    m_Threshold: 0.9285714
    m_Position: {x: -1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 5106a269f36fbcb46821c759017dc94b, type: 3}
    m_Threshold: 1
    m_Position: {x: 1.3902802, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Blend
    m_Mirror: 0
  m_BlendParameter: RotateSpeed
  m_BlendParameterY: MoveSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: TPS Animator Controller
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Posture
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: MoveSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: RotateSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Aim
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VerticalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: LRFoot
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1544693059203605492}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: Arms
    m_StateMachine: {fileID: 480605671017214323}
    m_Mask: {fileID: 31900000, guid: ccd3abe5c2a3fae458f829692612175a, type: 2}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 1
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &230221169696382354
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Do nothing
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 2312013992096844132}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 0}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &480605671017214323
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Arms
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 230221169696382354}
    m_Position: {x: 305.63934, y: 147.8287, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 8089926769289176477}
    m_Position: {x: 310, y: 10, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 230221169696382354}
--- !u!1107 &1544693059203605492
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 8582182294410066550}
    m_Position: {x: 310, y: 50, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 8582182294410066550}
--- !u!1101 &2312013992096844132
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Aim
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 8089926769289176477}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!206 &4289904822598732194
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: InCrouch
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400012, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0.16666667
    m_Position: {x: -1.528762, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0.33333334
    m_Position: {x: 1.528762, y: 0}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 0, y: 1.121362}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400008, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0.6666667
    m_Position: {x: -0.7632676, y: 1.003517}
    m_TimeScale: 2
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400014, guid: c22ff885470911d4393c7044e3b1a4fe, type: 3}
    m_Threshold: 0.99999994
    m_Position: {x: 0.7632676, y: 1.003516}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  m_BlendParameter: RotateSpeed
  m_BlendParameterY: MoveSpeed
  m_MinThreshold: 0
  m_MaxThreshold: 0.99999994
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &6246239367349125613
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: InAir
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 5735413055835740234, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: -5
    m_Position: {x: -1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5917537482288442099, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: 0
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 9203444774018483860, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: 5
    m_Position: {x: -1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5735413055835740234, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: 10
    m_Position: {x: 1, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 5917537482288442099, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: 15
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 9203444774018483860, guid: 0fec9f0786096cd4f852379309b777b8, type: 3}
    m_Threshold: 20
    m_Position: {x: 1, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 6480610267109901665, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 25
    m_Position: {x: -3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 1827226128182048838, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 30
    m_Position: {x: -5, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6480610267109901665, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 35
    m_Position: {x: -4, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6480610267109901665, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 40
    m_Position: {x: 3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 1827226128182048838, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 45
    m_Position: {x: 5, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 6480610267109901665, guid: 027bc59ecada0f44aaa6a7475abb01ec, type: 3}
    m_Threshold: 50
    m_Position: {x: 4, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Posture
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: 6581e1e6620bee84c9c808d8a165feda, type: 3}
    m_Threshold: 55
    m_Position: {x: 0, y: -10}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Posture
    m_Mirror: 0
  m_BlendParameter: LRFoot
  m_BlendParameterY: VerticalSpeed
  m_MinThreshold: -5
  m_MaxThreshold: 55
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!1101 &7472519473858675621
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Aim
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 230221169696382354}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &8089926769289176477
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: TakingBook
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 7472519473858675621}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 0
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -8766456253055335724, guid: adc8d3e79e1e93a458ee7e4ab1316f82, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &8582182294410066550
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -1525654880506663367}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
